test/expected/declare_fn.out
declare f as function (x as y)
                            ^
29: error: "y": unknown name
